truncate issue description

--- a/app/assets/stylesheets/bountysource/landing_page/_issue_card.scss
+++ b/app/assets/stylesheets/bountysource/landing_page/_issue_card.scss
@@ -61,33 +61,37 @@
 				margin-top: 1em;
 			}
 
+			.see-more {
+				color: #33ccff;
+			}
+
 			.issue-description {
 				overflow: hidden;
 				position: relative;
 				line-height: 1.5em;
-				max-height: 4.5em; /* only show 3 lines */
+				max-height: 4.5em; /* only show 2 lines */
 				text-align: justify;
 				margin-right: -1em;
 				padding-right: 1em;
 
-				&:before {
-					content: '...';
-					position: absolute;
-					right: 1em;
-					bottom: 0;
-					background-color: white;
-					z-index: 5;
-				}
+				// &:before {
+				// 	content: '...';
+				// 	position: absolute;
+				// 	right: 1em;
+				// 	bottom: 0;
+				// 	background-color: white;
+				// 	z-index: 5;
+				// }
 
-				&:after {
-					content: '';
-					position: absolute;
-					right: 0;
-					width: 1em;
-					height: 1em;
-					margin-top: 0.2em;
-					background: white;
-				}
+				// &:after {
+				// 	content: '';
+				// 	position: absolute;
+				// 	right: 0;
+				// 	width: 1em;
+				// 	height: 1em;
+				// 	margin-top: 0.2em;
+				// 	background: white;
+				// }
 			}
 		}
 
